# machine-learning-projects

./: .gitignore  PaintWidget.py  README.md  app.py  handwritten-recognition.ipynb  mnist_model.pth  model.py  pyproject.toml
cnn/: PaintWidget.py  README.md  app.py  handwritten-recognition.ipynb  mnist_model.pth  model.py
connect_4_agent/: README.md  compare_agents.py  connect4_against_ai.py  connect4gym.py  pyproject.toml
connect_4_agent/agents/: mcts_agent.py  random_agent.py
connect_4_agent/connect4_gym/: env.py
deep-q-learning/: env.py  pyproject.toml
minimax-alg/: connect4_against_ai.py  connect4gym.py
minimax-alg/agents/: minimax_agent.py
minimax-alg/connect4_gym/: env.py
minimax-alg/mcts/: mcts_agent.py
ppo_cart_pole/: config.py  ppo.py  pyproject.toml  utils.py
runs/Jun19_11-17-19_MacBook-Pro-4.local/: events.out.tfevents.1750299439.MacBook-Pro-4.local.42321.1
runs/Jun19_11-29-00_MacBook-Pro-4.local/: events.out.tfevents.1750300140.MacBook-Pro-4.local.51900.0
